--- a/.hgignore
+++ b/.hgignore
@@ -1,5 +1,6 @@
 java/.metadata/
 java/Translation/bin/
+java/Translation/doc/
 java/Translation/.classpath
 java/Translation/.project
 java/Translation/check-nullness
