Added projects generated by Quick Fix Scout eclipse plugin to .hgignore

--- a/.hgignore
+++ b/.hgignore
@@ -4,3 +4,5 @@ java/Translation/doc/
 java/Translation/.classpath
 java/Translation/.project
 java/Translation/check-nullness
+java/DO_NOT_DELETE_Observation_Translation
+java/DO_NOT_DELETE_Speculation_Translation
