--- a/.hgignore
+++ b/.hgignore
@@ -1,12 +1,8 @@
-.project
-.classpath
 java/.metadata/
 java/Translation/bin/
 java/Translation/doc/
-java/Translation/.classpath
-java/Translation/.project
 java/Translation/check-nullness
 java/Translation/javadoc
 java/DO_NOT_DELETE_Observation_Translation
 java/DO_NOT_DELETE_Speculation_Translation
-bin/
+java/Generation/bin/
