--- a/.hgignore
+++ b/.hgignore
@@ -6,3 +6,13 @@ java/Translation/javadoc
 java/DO_NOT_DELETE_Observation_Translation
 java/DO_NOT_DELETE_Speculation_Translation
 java/Generation/bin/
+java/Generation/.cache
+java/Generation/.scala_dependencies
+
+syntax: glob
+*.aux
+*.blg
+*.log
+*.out
+*~
+.#*
