--- a/java/build.gradle
+++ b/java/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'scala'
 
 //gradle jar will create a standalone jar that includes most dependencies (outside of
 //scala which is used to run the jar, see website/typecheckers/scripts/infer-nninf.sh)
+//You can now run the inference checkers via the command 'gradle infer'
 
 //In this project compileJava depends on compileScala (it's usually the other way around
 //in a gradle build).  This means to compile (but not package) verigames
@@ -66,10 +67,12 @@ def cfiAll        = jsr308Child("checker-framework-inference/checker-framework-i
 
 //Apply the following settings to all subprojects
 subprojects {
+
     //Very similar to checker-framework-inference
     //perhaps create a project encompassing both
     apply plugin: 'scala'
     
+    def cfiJar = cfiAll
 	def classpath = files(
 		jsr308Child("checker-framework-inference/checker-framework-inference-all.jar").getAbsolutePath()
 	)
@@ -97,9 +100,20 @@ subprojects {
 	    scalaTools 'org.scala-lang:scala-compiler:2.9.2'
 	    scalaTools 'org.scala-lang:scala-library:2.9.2'
 	    
+
+	    
 	    // Libraries needed for scala api
 	    compile 'org.scala-lang:scala-library:2.9.2'
 	    compile 'org.scala-lang:scala-compiler:2.9.2'
+	    
+	    //To ensure that we have all appropriate runtime dependencies I have inclduded
+	    //all of the libraries included by the scala shell script
+		runtime 'org.scala-lang:scala-dbc:2.9.2'
+		runtime 'org.scala-lang:scala-library:2.9.2'
+		runtime 'org.scala-lang:scala-partest:2.9.2'
+		//runtime 'org.scala-lang:scalacheck:2.9.2'
+		runtime 'org.scala-lang:scalap:2.9.2'
+		runtime 'org.scala-lang:scala-swing:2.9.2'
 	}
 	
 	tasks.compileJava {
