--- a/.hgignore
+++ b/.hgignore
@@ -32,8 +32,9 @@ syntax: glob
 *.pyc
 
 
-flash/PipeJam3/build/FlashBuilder/PipeJam3Web/.settings
+flash/PipeJam3/build/FlashBuilder/PipeJam3Web/.settings/
 flash/PipeJam3/build/FlashBuilder/PipeJam3Web/bin-debug
 flash/PipeJam3/build/FlashBuilder/PipeJam3Web/bin-release
 flash/PipeJam3/build/FlashBuilder/PipeJam3Web/html-template
+flash/PipeJam3/build/make/bin/
 flash/PipeJam3/src/buildInfo/BuildInfo.as
