--- a/.hgignore
+++ b/.hgignore
@@ -30,5 +30,9 @@ flash/PipeJam3/build/FlashBuilder/PipeJam3Web/.settings/
 flash/PipeJam3/build/FlashBuilder/PipeJam3Web/bin-debug
 flash/PipeJam3/build/FlashBuilder/PipeJam3Web/bin-release
 flash/PipeJam3/build/FlashBuilder/PipeJam3Web/html-template
+flash/PipeJam3/build/FlashBuilder4.7/PipeJam3Web/.settings/
+flash/PipeJam3/build/FlashBuilder4.7/PipeJam3Web/bin-debug
+flash/PipeJam3/build/FlashBuilder4.7/PipeJam3Web/bin-release
+flash/PipeJam3/build/FlashBuilder4.7/PipeJam3Web/html-template
 flash/PipeJam3/build/make/bin/
 flash/PipeJam3/src/buildInfo/BuildInfo.as
