--- a/website/html/java/DifficultyRater/.project
+++ b/website/html/java/DifficultyRater/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DifficultyCounter</name>
+	<name>DifficultyRater</name>
 	<comment></comment>
 	<projects>
 	</projects>
