--- a/java/Generation/.classpath
+++ b/java/Generation/.classpath
@@ -4,9 +4,14 @@
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/verigames-translation"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/checker-framework-inference"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/checkers"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/dataflow"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/asmx"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/javacutils"/>
+	<classpathentry kind="lib" path="/Users/mcarthur/dev/bin/scala-2.9.2/lib/scala-compiler.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/checker-framework-inference"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/annotation-file-utilities"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
