ignore optimizer build files

--- a/.hgignore
+++ b/.hgignore
@@ -17,6 +17,7 @@ java/test/.*/actual_.*xml
 java/test/.*/actual_.*txt
 java/test/.*/diff_.*txt
 java/dist/
+java/optimizer/build/
 
 syntax: glob
 *.aux
