--- a/java/optimizer/build.gradle
+++ b/java/optimizer/build.gradle
@@ -23,6 +23,6 @@ dependencies {
 //     gradle -q printRuntimeClasspath
 // If the build script is printing a bunch of other nonsense, you might need:
 //     gradle -q printRuntimeClasspath | tail -n1
-task printRuntimeClasspath {
+task printRuntimeClasspath << {
     println configurations.runtime.collect { File f -> f.getAbsolutePath() } .join(":")
 }
