--- a/java/Generation/build.gradle
+++ b/java/Generation/build.gradle
@@ -87,7 +87,7 @@ def checkerMap = [
     new CheckerDef('lock',  'lock.LockInfChecker', 'lock.LockInfVisitor', 'lock.LockInfGameSolver'),
 ].collectEntries{[it.command, it]}
 
-tasks.add(name:'infer', type : JavaExec ) {
+tasks.create(name:'infer', type : JavaExec ) {
   	description = 'Runs an inference checker over the specified Java files.  Use as follows:\n'            +
   				  "\tgradle infer -P $infCheckerKey=<checkerToUse> -P $infArgsKey=\"<srcFiles>\"\n"        +
   				  "\t$infCheckerKey  - Choose one of [" + checkerMap.keySet().join(", ") + ']\n'           +
