--- a/java/build.gradle
+++ b/java/build.gradle
@@ -131,24 +131,12 @@ subprojects {
 	}
 
 	dependencies {
-	    // Libraries needed to run the scala tools
-	    scalaTools 'org.scala-lang:scala-compiler:2.9.2'
-	    scalaTools 'org.scala-lang:scala-library:2.9.2'
-
-	    // Libraries needed for scala api
+	    // Libraries needed for scala
 	    compile 'org.scala-lang:scala-library:2.9.2'
 	    compile 'org.scala-lang:scala-compiler:2.9.2'
 
-	    //To ensure that we have all appropriate runtime dependencies I have inclduded
-	    //all of the libraries included by the scala shell script
-		//runtime 'org.scala-lang:scala-dbc:2.9.2'
-		runtime 'org.scala-lang:scala-library:2.9.2'
-		//runtime 'org.scala-lang:scala-partest:2.9.2'
-		//runtime 'org.scala-lang:scalacheck:2.9.2'
-		runtime 'org.scala-lang:scalap:2.9.2'
-		//runtime 'org.scala-lang:scala-swing:2.9.2'
-
-		compile files(cpJars)
+	    // Filesystem dependencies
+	    compile files(cpJars)
 	}
 
 	tasks.compileJava {
