--- a/flash/PipeJam3/lib/levels/tutorial/setup/WidgetPracticeAssignments.json
+++ b/flash/PipeJam3/lib/levels/tutorial/setup/WidgetPracticeAssignments.json
@@ -1,9 +1,11 @@
-{"id": "WidgetPractice",
-"qid": 1,
-"target_score": 140,
-"assignments":{
-"var:0":{},
-"var:1":{},
-"var:2":{},
-"var:3":{}}
+{
+    "qid": 1, 
+    "target_score": 4, 
+    "id": "WidgetPractice", 
+    "assignments": {
+        "var:0": {}, 
+        "var:1": {}, 
+        "var:2": {}, 
+        "var:3": {}
+    }
 }
