--- a/flash/PipeJam3/lib/levels/tutorial/setup/deprecated/OptimizeAssignments.json
+++ b/flash/PipeJam3/lib/levels/tutorial/setup/deprecated/OptimizeAssignments.json
@@ -1,9 +1,8 @@
 {
-    "qid": 2, 
-    "target_score": 3, 
-    "id": "LockedWidget", 
+    "qid": 6, 
+    "target_score": 620, 
+    "id": "Optimize", 
     "assignments": {
-        "var:4": {}, 
         "var:0": {}, 
         "var:1": {}, 
         "var:2": {}, 
