--- a/java/Translation/.classpath
+++ b/java/Translation/.classpath
@@ -2,10 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/checkers"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jsr308-langtools"/>
 	<classpathentry kind="lib" path="lib/junit-4.8.2.jar"/>
-	<classpathentry kind="lib" path="lib/xom-1.2.7.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/checker-framework-inference"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/framework"/>
+	<classpathentry kind="lib" path="lib/xom-1.2.10.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/checker"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
